vault/service-vault.yaml
apiVersion: v1
kind: Service
metadata:
  name: vault
  namespace: vault
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
  selector:
    app: vault
  sessionAffinity: None
  type: ClusterIP
